obsolete/external-ingresses/torrent-external_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torrent-lan
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: torrent.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: qbittorent-external-ip
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorent-external-ip
  namespace: default
spec:
  ports:
    - name: qbittorent-app
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qbittorent-external-ip
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.100.201
    ports:
      - name: qbittorrent
        port: 8080
        protocol: TCP
